Fri Aug  3 14:11:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_vector_ptr and gsl_vector_const_ptr functions

Mon Jul 16 21:28:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* reim_source.c: initialized views to null

Fri Jul 13 21:29:06 2001  Brian Gough  <bjg@network-theory.co.uk>

	* changed views to be structs and used casts to initialize them

Mon Jul  2 12:34:43 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view.h: provide macros for initializing null vectors and views

Sun Jul  1 22:38:30 2001  Brian Gough  <bjg@network-theory.co.uk>

	* introduction of new-style vector views

	* view_source.c: changed order of arguments to be consistent with
 	rest of library for _with_stride functions

Mon May 14 22:43:18 2001  Brian Gough  <bjg@network-theory.co.uk>

	* vector_source.c (FUNCTION): removed unnecessary inline from
 	static function definition

Tue Mar 27 15:12:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view_source.c: split view functions into a separate file

Sat Sep  9 16:45:15 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added an owner field for indicating whether the underlying
 	memory is owned by the vector. Changed the meaning of the block
 	field to always be the address of the underlying block, even for
 	subviews (previously the block field was set to NULL in this
 	case).

Sun Jul 16 10:39:39 2000  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c (FUNCTION): added gsl_vector_view function for
 	creating a vector view of an ordinary C array

Sat Jul 15 21:44:49 2000  Brian Gough  <bjg@network-theory.co.uk>

	* changed GSL_EDOM to GSL_EINVAL for invalid vector size arguments

Sat Jun 17 15:37:57 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fixed up missing MULTIPLICITY factors in various functions 

Sun May 28 12:25:31 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test_complex_source.c (FUNCTION): use binary mode "b" when
 	reading and writing binary files
