@@ -51,9 +51,9 @@ typedef struct
   gsl_matrix_ulong matrix;
 } gsl_matrix_ulong_view;
 
-typedef struct
+typedef const struct
 {
-  const gsl_matrix_ulong matrix;
+  gsl_matrix_ulong matrix;
 } gsl_matrix_ulong_const_view;
 
 /* Allocation */
