@@ -1,5 +1,5 @@
-#define NULL_VECTOR {0, 0, 0, 0}
-#define NULL_VECTOR_VIEW {{0, 0, 0, 0}}
+#define NULL_VECTOR {0, 0, 0, 0, 0}
+#define NULL_VECTOR_VIEW {{0, 0, 0, 0, 0}}
 
 #define NULL_MATRIX {0, 0, 0, 0, 0, 0}
 #define NULL_MATRIX_VIEW {{0, 0, 0, 0, 0, 0}}
