@@ -51,9 +51,9 @@ typedef struct
   gsl_vector_char vector;
 } gsl_vector_char_view;
 
-typedef struct
+typedef const struct
 {
-  const gsl_vector_char vector;
+  gsl_vector_char vector;
 } gsl_vector_char_const_view;
 
 
