@@ -51,9 +51,9 @@ typedef struct
   gsl_vector_int vector;
 } gsl_vector_int_view;
 
-typedef struct
+typedef const struct
 {
-  const gsl_vector_int vector;
+  gsl_vector_int vector;
 } gsl_vector_int_const_view;
 
 
