@@ -1,2 +1,2 @@
-#define NULL_VECTOR {0, 0, 0, 0}
-#define NULL_VECTOR_VIEW {{0, 0, 0, 0}}
+#define NULL_VECTOR {0, 0, 0, 0, 0}
+#define NULL_VECTOR_VIEW {{0, 0, 0, 0, 0}}
